2004-10-11 DJ Lucas <dj@linuxfromscratch.org>
	* Fixed multiple errors in nfs-server bootscript
	* Removed lockd from nfs-client bootscript
	* Added svn keywords to remaining bootscripts

2004-10-02 DJ Lucas <dj@linuxfromscratch.org>
	* Changed all scripts to use full path names

2004-09-28 DJ Lucas <dj@linuxfromscratch.org>
	* Replaced nfs-server and nfs-client scripts
	* Adjusted mysql and winbind scripts to use PIDFILE
	* Added svn keywords to remaining bootscripts

2004-08-26 Randy McMurchy <randy@linuxfromscratch.org>
	* Removed usb script (suggested by Alexander Patrakov)

2004-08-06 Randy McMurchy <randy@linuxfromscratch.org>
	* Added openldap (slapd and slurpd startup) scripts

2004-08-05 Randy McMurchy <randy@linuxfromscratch.org>
	* Added cyrus-sasl (Cyrus SASL authdaemon) script 

2004-08-03 DJ Lucas <dj@linuxfromscratch.org>
	* Added MODE and DIRMODE variables to set 
	  permissions of installed scripts and 
	  directories
	* Corrected script to remove svn directories
	  when creating release tarball

2004-07-31 Randy McMurchy <randy@linuxfromscratch.org>
	* Added nas (Network Audio Server) script 

2004-07-28 DJ Lucas <dj@linuxfromscratch.org>
	* Made minor fixups to dhcpcd, dhclient, and ipx 
	  service scripts
	* Added a shell script to create tarball

2004-07-28 Randy McMurchy <randy@linuxfromscratch.org>
	* Changed location of PID file in mysql script

2004-07-21 DJ Lucas <dj@linuxfromscratch.org>
	* Changed vsftpd bootscript to use loadproc

2004-07-19 DJ Lucas <dj@linuxfromscratch.org>
	* Added svn and vsftpd scripts

2004-06-27 DJ Lucas <dj@linuxfromscratch.org>
	* Added sysstat bootscript
	* Fixed missing $EXTDIR targets in Makefile

2004-06-16 DJ Lucas <dj@linuxfromscratch.org>
	* Added GPMOPTS to gpm script
	* wrapped all gpm variables in quotes

2004-05-22 Tushar T <tushar@linuxfromscratch.org>
	* Added winbind script

2004-05-14 Tushar T <tushar@linuxfromscratch.org>
	* Added init.d/kerberos script
	* Added init.d/usb script
