@@ -1,4 +1,4 @@
-<!ENTITY day          "12">
+<!ENTITY day          "13">
 <!ENTITY month        "10">
 <!ENTITY year         "2004">
 <!ENTITY version      "svn-&year;&month;&day;">
@@ -19,7 +19,7 @@
 <!ENTITY publisher      "Unknown">
 
 
-<!ENTITY blfs-bootscripts-version     "20041012"> 
+<!ENTITY blfs-bootscripts-version     "20041013"> 
 <!ENTITY blfs-bootscripts-download    "&downloads-root;/blfs-bootscripts-&blfs-bootscripts-version;.tar.bz2">
                                      
 <!-- Part II -->                     
