@@ -21,6 +21,9 @@ who wrote what.</para>
 <para>&version; - &releasedate;</para>
 
 <itemizedlist>
+
+<listitem><para>October 13th, 2004 [igor]: Updated to
+blfs-bootscripts-20041013 (NTP corrections).</para></listitem>
     
 <listitem><para>October 12th, 2004 [igor]: Changed MySQL instructions to
 compile without NPTL patch.</para></listitem>
