@@ -10,6 +10,7 @@
 case "$1" in
 	start)
 		echo "Starting ntpd..."
+		ntpd -gqx
 		loadproc /usr/sbin/ntpd
 		;;
 
